# gurobi-rs

./: .gitignore  Cargo.toml  LICENSE  flake.nix
crates/grb/: Cargo.toml  README.md
crates/grb-macro/: Cargo.toml
crates/grb-macro/src/: lib.rs
crates/grb-sys2/: Cargo.toml
crates/grb/src/: ffi.rs
crates/guro-sys/: Cargo.toml
crates/guro-sys/src/: lib.rs
crates/gurobi-macro/: Cargo.toml
crates/gurobi-macro/src/: lib.rs
crates/gurobi-rs/: .gitignore  Cargo.toml  README.md
crates/gurobi-rs/examples/: callback.rs  example_utils.rs  facility.rs  mip.rs  piecewise.rs  qcp.rs  qp.rs  sensitivity.rs  sos.rs  tsp_lazy_constraints.rs  tune.rs  workforce1.rs  workforce2.rs  workforce3.rs
crates/gurobi-rs/examples/workforce/: mod.rs
crates/gurobi-rs/src/: attribute.rs  callback.rs  constants.rs  env.rs  expr.rs  ffi.rs  lib.rs  lib_impl.rs  model.rs  model_object.rs  parameter.rs  prelude.rs  util.rs
crates/gurobi-rs/tests/: callback_error.rs  common.rs  genconstr.rs  heuristic_soln.rs  iis.rs  multi_scenario.rs  phases.rs  pwl_func.rs  resolve_with_new_objective.rs
crates/gurobi-rs/tests/compile-tests/: add_var.rs  bad_add_var_args.rs  bad_add_var_types.rs  bad_cmp_expr.rs  bad_cmp_op.rs  bad_nested.rs  bad_op.rs  eq_range.rs  garbage.rs  simple.rs  user_cuts_deprecated.rs  user_cuts_deprecated.stderr  utils.rs
