[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "1.0.0"
authors = ["Germán Martín Heim <german.martin.heim@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/oximo-rs/gurobi-rs"
homepage = "https://github.com/oximo-rs/gurobi-rs"

[workspace.dependencies]
# Internal crates
guro-sys = { path = "crates/guro-sys" }
gurobi-macro = { path = "crates/gurobi-macro" }

# External
anyhow = "1.0.104"
fnv = "1"
cstr-enum = "1"
cfg-if = "1"
quote = "1"
proc-macro2 = "1"
syn = { version = "3", features = ["full", "parsing", "printing", "derive", "proc-macro", "clone-impls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.1"
proptest = "1"
trybuild = "1.0.64"
gag = "1"
