[package]
name = "grb-macro"
version = "0.1.0"
edition = "2018"
license = "MIT"
authors = ["Yannik Rist <yannik.rist@uqconnect.edu.au>"]
description = "Procedural macros for the gurobi-rs crate."
homepage = "https://github.com/oximo-rs/gurobi-rs/"
repository = "https://github.com/oximo-rs/gurobi-rs/"
readme = "../gurobi-rs/README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "^1.0", features=["full", "parsing", "printing", "derive", "proc-macro", "clone-impls"], default-features=false }
quote = "^1.0"
proc-macro2 = "^1.0"
