[package]
name = "grb-sys2"
version = "12.1.2"
edition = "2018"
build = "build.rs"
license = "MIT"
links = "gurobi"
authors = ["Yannik Rist <yannik.rist@uqconnect.edu.au>"]
description = "Gurobi C API FFI declarations."
homepage = "https://github.com/oximo-rs/gurobi-rs/"
repository = "https://github.com/oximo-rs/gurobi-rs/"

[build-dependencies]
anyhow = "1.0.83"

[dependencies]
anyhow = { version = "1.0.83", optional = true }

[features]
# Gurobi 12 renamed the env-creation functions and added version arguments.
# Enable this for Gurobi >= 12; leave off for Gurobi 10/11.
gurobi12 = []
build_script_tests = ["anyhow"]
