[package]
name = "gurobi-rs"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "A Rust API for the Gurobi optimizer"
categories = ["algorithms", "api-bindings", "mathematics", "science"]
keywords = ["optimization", "simplex", "constraint", "mip", "solver"]
autoexamples = false
build = "build/main.rs"
readme = "README.md"
exclude = ["/tests"]

[features]
default = []
gurobi13 = ["guro-sys", "guro-sys/gurobi13"]
gurobi12 = ["guro-sys", "guro-sys/gurobi12"]
gurobi11 = ["guro-sys"]
gurobi10 = ["guro-sys"]


[package.metadata.docs.rs]
features = ["gurobi13"]
rustdoc-args = ["--html-in-header", "doc/katex-header.html"]

[dependencies]
fnv.workspace = true
anyhow.workspace = true
cstr-enum.workspace = true
guro-sys = { workspace = true, optional = true }
gurobi-macro.workspace = true
cfg-if.workspace = true

[dev-dependencies]
proptest.workspace = true
trybuild.workspace = true

# gag redirects stdout via Unix file descriptors and does not build on Windows.
[target.'cfg(unix)'.dev-dependencies]
gag.workspace = true

[build-dependencies]
anyhow.workspace = true
csv.workspace = true
quote.workspace = true
proc-macro2.workspace = true
serde.workspace = true
serde_json.workspace = true

[[example]]
name = "callback"
path = "examples/callback.rs"

[[example]]
name = "facility"
path = "examples/facility.rs"

[[example]]
name = "mip"
path = "examples/mip.rs"

[[example]]
name = "piecewise"
path = "examples/piecewise.rs"

[[example]]
name = "qcp"
path = "examples/qcp.rs"

[[example]]
name = "qp"
path = "examples/qp.rs"

[[example]]
name = "sensitivity"
path = "examples/sensitivity.rs"

[[example]]
name = "sos"
path = "examples/sos.rs"

[[example]]
name = "tune"
path = "examples/tune.rs"

[[example]]
name = "workforce1"
path = "examples/workforce1.rs"

[[example]]
name = "workforce2"
path = "examples/workforce2.rs"

[[example]]
name = "workforce3"
path = "examples/workforce3.rs"

[[example]]
name = "tsp_lazy_constraints"
path = "examples/tsp_lazy_constraints.rs"
